--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,29 @@
-# Ignore data outputs
-data/
-*.parquet
-*.csv
+# Environnements virtuels
+.venv/
+venv/
 
-# Python cache
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
 
-# VS Code / editor
+# OS / IDE
+.DS_Store
 .vscode/
 .idea/
+
+# Notebooks
+.ipynb_checkpoints/
+
+# Secrets
+.env
+*.env
+
+# Données & artefacts locaux
+data/
+reports/
+*.zip
